# yt-comment-sentiment

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  index.html  params.yaml  pyproject.toml
.github/workflows/: build_frontend.yaml
assets/: index-B3i31dOZ.css  index-BoX0HNDn.js  index-C2fwtrIY.css  index-Cs54QSH5.js
backend/: app.py  test_app.py  utils.py
backend/routes/: test_youtube.py  youtube.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
frontend/src/components/: SentimentPieChart.vue  VideoComments.vue  VideoUrlInputForm.vue  YTVideoDetailsCard.vue
frontend/src/components/ui/toast/: use-toast.js
frontend/src/lib/: youtubeComments.js
ml/: params.py
ml/comment_sentiment/: building.py  evaluation.py  ingestion.py
src/: building.py  evaluation.py  ingestion.py
