[project]
name = "yt-comment-sentiment"
version = "0.1.0"
description = "end-to-end project to build ML model to predict sentiment of youtube video comments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "mlflow>=2.18.0",
    "polars>=1.14.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "pytest>=8.3.4"]

[project.optional-dependencies]
training = [
    "dagshub>=0.4.2",
    "dvc>=3.57.0",
    "pip>=24.3.1",
    "seaborn>=0.13.2",
]
backend = ["fastapi[standard]>=0.115.5", "wordcloud>=1.9.4"]

[tool.ruff]
src = [".", "backend", "ml"]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "F",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "B008",
    "B905",
    "E501",
    "E741",
    "EM101",
    "EM102",
    "INP001",
    "ISC001",
    "N818",
    "PGH003",
    "PLE1142",
    "PLR0913",
    "PLR2004",
    "S101",
    "S301",
]
extend-unfixable = ["B", "F401"]

[tool.pytest.ini_options]
filterwarnings = [
    # filter warnings from mlflow due to pydantic v1
    "ignore::DeprecationWarning",
]
